# SSP-Flask

./: .gitignore  .mypy.ini  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
app/: __init__.py  config.py  main.py
app/helpers/: exceptions.py  helpers.py
app/routes/: __init__.py  page_routes.py  rendered_routes.py  template_routes.py  toolkit_routes.py
app/ssp_tools/: createfiles.py  creatematrix.py  exportto.py  family.py  make_families.py  make_ssp.py  makefamilies.py  makessp.py  sop.py
app/ssp_tools/createfiles/: createfiles.py
app/ssp_tools/creatematrix/: creatematrix.py
app/ssp_tools/helpers/: hash_checker.py  opencontrol.py  project.py  secrender.py  ssp.py  ssptoolkit.py  toolkitconfig.py
app/static/css/: styles.css  styles.css.map  styles.scss
app/static/js/: codemirror.min.js  foldgutter.min.js
app/templates/: base.html
app/templates/common/: breadcrumbs.html  footer.html  messages.html  nav.html
app/templates/pages/: docs_file_list.html  docx_file_list.html  editor.html  error.html  file_viewer.html  index.html
app/templates/rendered/: rendered_directory_list.html  rendered_file.html  rendered_file_list.html
app/templates/templates/: template_editor.html  template_file.html  templates.html  (+1 more)
tests/: conftest.py
tests/test_routes/: test_page_routes.py  test_rendered_routes.py  test_template_routes.py  test_toolkit_routes.py
tests/testssp/: opencontrol.yaml
tests/unit/: test_exportto.py  test_helpers.py  test_makefamilies.py  test_ssptoolkit.py  test_toolkitconfig.py
(+10 files in other folders)
