[project]
name = "ssp-flask"
version = "0.1.0"
description = "A Flask wrapper for the SSP Toolkit"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pathlib>=1.0.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "pyyaml-include>=2.2",
    "pyyaml>=6.0.2",
    "md-toc>=9.0.0",
    "rtyaml>=1.0.0",
    "pydantic>=2.11.3",
    "pypandoc>=1.15",
    "click>=8.1.8",
    "markdown>=3.8",
    "slugify>=0.0.1",
    "pytest-cov>=6.1.1",
]
